# gl-smartsort

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/gl_smartsort/: __init__.py  cli.py  smartsort.py
tests/: test_smartsort.py
