[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "gl-smartsort"
version = "0.1.0"
description = "Smart-sort GL Strings into a canonical order."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Martin J. Maiers" },
]
keywords = ["HLA", "GL string", "immunogenetics", "canonicalization", "sorting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nmdp-bioinformatics/gl-smartsort"
Source = "https://github.com/nmdp-bioinformatics/gl-smartsort"
Issues = "https://github.com/nmdp-bioinformatics/gl-smartsort/issues"

[project.scripts]
gl-smartsort = "gl_smartsort.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gl_smartsort"]
